// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/IconTextNotification Generic counter 1`] = `
<IconTextNotification
  color="#1976d2"
  counter={17}
  icon="info"
  text="Generic text"
>
  <WithStyles(Component)
    color="#1976d2"
    counter={17}
    icon="info"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    text="Generic text"
    theme={Object {}}
  >
    <Component
      classes={
        Object {
          "icon": "Component-icon-0-3-161",
          "root": "Component-root-0-3-160",
        }
      }
      color="#1976d2"
      counter={17}
      icon="info"
      text="Generic text"
    >
      <div
        className="Component-root-0-3-160"
      >
        <MUIcon
          className="Component-icon-0-3-161"
          color="#1976d2"
          fontSize={37}
          type="info"
        >
          <WithStyles(MUIconComp)
            className="Component-icon-0-3-161"
            color="#1976d2"
            fontSize={37}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            theme={Object {}}
            type="info"
          >
            <MUIconComp
              className="Component-icon-0-3-161"
              classes={
                Object {
                  "root": "MUIconComp-root-0-3-35 MUIconComp-root-d48-0-3-164",
                }
              }
              color="#1976d2"
              fontSize={37}
              type="info"
            >
              <i
                className="MUIconComp-root-0-3-35 MUIconComp-root-d48-0-3-164 Component-icon-0-3-161"
              >
                info
              </i>
            </MUIconComp>
          </WithStyles(MUIconComp)>
        </MUIcon>
        <Typography
          bold={true}
          color="#1976d2"
          textTransform="uppercase"
          variant="distance"
        >
          <WithStyles(TypographyComp)
            bold={true}
            color="#1976d2"
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            textTransform="uppercase"
            theme={Object {}}
            variant="distance"
          >
            <TypographyComp
              bold={true}
              classes={
                Object {
                  "big": "TypographyComp-big-0-3-7",
                  "bold": "TypographyComp-bold-0-3-1",
                  "capitalize": "TypographyComp-capitalize-0-3-12",
                  "distance": "TypographyComp-distance-0-3-6",
                  "ellipsis": "TypographyComp-ellipsis-0-3-14",
                  "giant": "TypographyComp-giant-0-3-9",
                  "heading": "TypographyComp-heading-0-3-8",
                  "italic": "TypographyComp-italic-0-3-3",
                  "lowercase": "TypographyComp-lowercase-0-3-11",
                  "noWrap": "TypographyComp-noWrap-0-3-13",
                  "semiBold": "TypographyComp-semiBold-0-3-2",
                  "standard": "TypographyComp-standard-0-3-5",
                  "subtext": "TypographyComp-subtext-0-3-4",
                  "uppercase": "TypographyComp-uppercase-0-3-10",
                }
              }
              color="#1976d2"
              textTransform="uppercase"
              variant="distance"
            >
              <span
                className="TypographyComp-distance-0-3-6 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                style={
                  Object {
                    "color": "rgba(25, 118, 210, 1)",
                  }
                }
              >
                Generic text
                 x17
              </span>
            </TypographyComp>
          </WithStyles(TypographyComp)>
        </Typography>
      </div>
    </Component>
  </WithStyles(Component)>
</IconTextNotification>
`;

exports[`Storyshots Components/IconTextNotification Small size 1`] = `
<IconTextNotification
  color="#388e3c"
  counter={17}
  icon="info"
  smallSize={true}
  text="Generic text"
>
  <WithStyles(Component)
    color="#388e3c"
    counter={17}
    icon="info"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    smallSize={true}
    text="Generic text"
    theme={Object {}}
  >
    <Component
      classes={
        Object {
          "icon": "Component-icon-0-3-161",
          "root": "Component-root-0-3-160",
        }
      }
      color="#388e3c"
      counter={17}
      icon="info"
      smallSize={true}
      text="Generic text"
    >
      <div
        className="Component-root-0-3-160"
      >
        <MUIcon
          className="Component-icon-0-3-161"
          color="#388e3c"
          fontSize={28}
          type="info"
        >
          <WithStyles(MUIconComp)
            className="Component-icon-0-3-161"
            color="#388e3c"
            fontSize={28}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            theme={Object {}}
            type="info"
          >
            <MUIconComp
              className="Component-icon-0-3-161"
              classes={
                Object {
                  "root": "MUIconComp-root-0-3-35 MUIconComp-root-d49-0-3-165",
                }
              }
              color="#388e3c"
              fontSize={28}
              type="info"
            >
              <i
                className="MUIconComp-root-0-3-35 MUIconComp-root-d49-0-3-165 Component-icon-0-3-161"
              >
                info
              </i>
            </MUIconComp>
          </WithStyles(MUIconComp)>
        </MUIcon>
        <Typography
          bold={true}
          color="#388e3c"
          textTransform="uppercase"
          variant="standard"
        >
          <WithStyles(TypographyComp)
            bold={true}
            color="#388e3c"
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            textTransform="uppercase"
            theme={Object {}}
            variant="standard"
          >
            <TypographyComp
              bold={true}
              classes={
                Object {
                  "big": "TypographyComp-big-0-3-7",
                  "bold": "TypographyComp-bold-0-3-1",
                  "capitalize": "TypographyComp-capitalize-0-3-12",
                  "distance": "TypographyComp-distance-0-3-6",
                  "ellipsis": "TypographyComp-ellipsis-0-3-14",
                  "giant": "TypographyComp-giant-0-3-9",
                  "heading": "TypographyComp-heading-0-3-8",
                  "italic": "TypographyComp-italic-0-3-3",
                  "lowercase": "TypographyComp-lowercase-0-3-11",
                  "noWrap": "TypographyComp-noWrap-0-3-13",
                  "semiBold": "TypographyComp-semiBold-0-3-2",
                  "standard": "TypographyComp-standard-0-3-5",
                  "subtext": "TypographyComp-subtext-0-3-4",
                  "uppercase": "TypographyComp-uppercase-0-3-10",
                }
              }
              color="#388e3c"
              textTransform="uppercase"
              variant="standard"
            >
              <span
                className="TypographyComp-standard-0-3-5 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                style={
                  Object {
                    "color": "rgba(56, 142, 60, 1)",
                  }
                }
              >
                Generic text
                 x17
              </span>
            </TypographyComp>
          </WithStyles(TypographyComp)>
        </Typography>
      </div>
    </Component>
  </WithStyles(Component)>
</IconTextNotification>
`;

exports[`Storyshots Components/IconTextNotification Warning 1`] = `
<IconTextNotification
  color="#d50000"
  counter={3}
  icon="warning"
  text="Interrupted"
>
  <WithStyles(Component)
    color="#d50000"
    counter={3}
    icon="warning"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    text="Interrupted"
    theme={Object {}}
  >
    <Component
      classes={
        Object {
          "icon": "Component-icon-0-3-161",
          "root": "Component-root-0-3-160",
        }
      }
      color="#d50000"
      counter={3}
      icon="warning"
      text="Interrupted"
    >
      <div
        className="Component-root-0-3-160"
      >
        <MUIcon
          className="Component-icon-0-3-161"
          color="#d50000"
          fontSize={37}
          type="warning"
        >
          <WithStyles(MUIconComp)
            className="Component-icon-0-3-161"
            color="#d50000"
            fontSize={37}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            theme={Object {}}
            type="warning"
          >
            <MUIconComp
              className="Component-icon-0-3-161"
              classes={
                Object {
                  "root": "MUIconComp-root-0-3-35 MUIconComp-root-d46-0-3-162",
                }
              }
              color="#d50000"
              fontSize={37}
              type="warning"
            >
              <i
                className="MUIconComp-root-0-3-35 MUIconComp-root-d46-0-3-162 Component-icon-0-3-161"
              >
                warning
              </i>
            </MUIconComp>
          </WithStyles(MUIconComp)>
        </MUIcon>
        <Typography
          bold={true}
          color="#d50000"
          textTransform="uppercase"
          variant="distance"
        >
          <WithStyles(TypographyComp)
            bold={true}
            color="#d50000"
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            textTransform="uppercase"
            theme={Object {}}
            variant="distance"
          >
            <TypographyComp
              bold={true}
              classes={
                Object {
                  "big": "TypographyComp-big-0-3-7",
                  "bold": "TypographyComp-bold-0-3-1",
                  "capitalize": "TypographyComp-capitalize-0-3-12",
                  "distance": "TypographyComp-distance-0-3-6",
                  "ellipsis": "TypographyComp-ellipsis-0-3-14",
                  "giant": "TypographyComp-giant-0-3-9",
                  "heading": "TypographyComp-heading-0-3-8",
                  "italic": "TypographyComp-italic-0-3-3",
                  "lowercase": "TypographyComp-lowercase-0-3-11",
                  "noWrap": "TypographyComp-noWrap-0-3-13",
                  "semiBold": "TypographyComp-semiBold-0-3-2",
                  "standard": "TypographyComp-standard-0-3-5",
                  "subtext": "TypographyComp-subtext-0-3-4",
                  "uppercase": "TypographyComp-uppercase-0-3-10",
                }
              }
              color="#d50000"
              textTransform="uppercase"
              variant="distance"
            >
              <span
                className="TypographyComp-distance-0-3-6 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                style={
                  Object {
                    "color": "rgba(213, 0, 0, 1)",
                  }
                }
              >
                Interrupted
                 x3
              </span>
            </TypographyComp>
          </WithStyles(TypographyComp)>
        </Typography>
      </div>
    </Component>
  </WithStyles(Component)>
</IconTextNotification>
`;

exports[`Storyshots Components/IconTextNotification Warning counter 1`] = `
<IconTextNotification
  color="#d50000"
  icon="warning"
  text="Interrupted"
>
  <WithStyles(Component)
    color="#d50000"
    icon="warning"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    text="Interrupted"
    theme={Object {}}
  >
    <Component
      classes={
        Object {
          "icon": "Component-icon-0-3-161",
          "root": "Component-root-0-3-160",
        }
      }
      color="#d50000"
      icon="warning"
      text="Interrupted"
    >
      <div
        className="Component-root-0-3-160"
      >
        <MUIcon
          className="Component-icon-0-3-161"
          color="#d50000"
          fontSize={37}
          type="warning"
        >
          <WithStyles(MUIconComp)
            className="Component-icon-0-3-161"
            color="#d50000"
            fontSize={37}
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            theme={Object {}}
            type="warning"
          >
            <MUIconComp
              className="Component-icon-0-3-161"
              classes={
                Object {
                  "root": "MUIconComp-root-0-3-35 MUIconComp-root-d47-0-3-163",
                }
              }
              color="#d50000"
              fontSize={37}
              type="warning"
            >
              <i
                className="MUIconComp-root-0-3-35 MUIconComp-root-d47-0-3-163 Component-icon-0-3-161"
              >
                warning
              </i>
            </MUIconComp>
          </WithStyles(MUIconComp)>
        </MUIcon>
        <Typography
          bold={true}
          color="#d50000"
          textTransform="uppercase"
          variant="distance"
        >
          <WithStyles(TypographyComp)
            bold={true}
            color="#d50000"
            innerRef={null}
            jssContext={
              Object {
                "classNamePrefix": "",
                "disableStylesGeneration": false,
              }
            }
            textTransform="uppercase"
            theme={Object {}}
            variant="distance"
          >
            <TypographyComp
              bold={true}
              classes={
                Object {
                  "big": "TypographyComp-big-0-3-7",
                  "bold": "TypographyComp-bold-0-3-1",
                  "capitalize": "TypographyComp-capitalize-0-3-12",
                  "distance": "TypographyComp-distance-0-3-6",
                  "ellipsis": "TypographyComp-ellipsis-0-3-14",
                  "giant": "TypographyComp-giant-0-3-9",
                  "heading": "TypographyComp-heading-0-3-8",
                  "italic": "TypographyComp-italic-0-3-3",
                  "lowercase": "TypographyComp-lowercase-0-3-11",
                  "noWrap": "TypographyComp-noWrap-0-3-13",
                  "semiBold": "TypographyComp-semiBold-0-3-2",
                  "standard": "TypographyComp-standard-0-3-5",
                  "subtext": "TypographyComp-subtext-0-3-4",
                  "uppercase": "TypographyComp-uppercase-0-3-10",
                }
              }
              color="#d50000"
              textTransform="uppercase"
              variant="distance"
            >
              <span
                className="TypographyComp-distance-0-3-6 TypographyComp-uppercase-0-3-10 TypographyComp-bold-0-3-1"
                style={
                  Object {
                    "color": "rgba(213, 0, 0, 1)",
                  }
                }
              >
                Interrupted
              </span>
            </TypographyComp>
          </WithStyles(TypographyComp)>
        </Typography>
      </div>
    </Component>
  </WithStyles(Component)>
</IconTextNotification>
`;
